# AutoAgents

./: .gitignore  AGENTS.md  APACHE_LICENSE  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIT_LICENSE  Makefile  PUBLISH.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  RELEASE.md  STREAMING_IMPLEMENTATION.md  feature_prompt.md  lefthook.yml  run.sh  test-build.Dockerfile
crates/autoagents/: Cargo.toml
crates/autoagents-cli/: Cargo.toml  README.md
crates/autoagents-cli/src/: main.rs
crates/autoagents-core/: Cargo.toml
crates/autoagents-core/benches/: agent_runtime.rs
crates/autoagents-core/src/: channel.rs  document.rs  environment.rs  event_fanout.rs  lib.rs  one_or_many.rs  protocol.rs  utils.rs
crates/autoagents-core/src/actor/: subscriber.rs
crates/autoagents-core/src/agent/: actor.rs  base.rs  builder.rs  config.rs  context.rs  direct.rs  error.rs  hooks.rs  mod.rs  output.rs  protocol.rs  state.rs  task.rs
crates/autoagents-core/src/embeddings/: distance.rs  mod.rs
crates/autoagents-core/src/readers/: mod.rs  simple_directory_reader.rs
crates/autoagents-core/src/runtime/: manager.rs  mod.rs  single_threaded.rs
crates/autoagents-core/src/tests/: agent_integration_tests.rs  mod.rs
crates/autoagents-core/src/tool/: mod.rs
crates/autoagents-core/src/vector_store/: in_memory_store.rs  mod.rs  payload.rs  request.rs
crates/autoagents-derive/: Cargo.toml
crates/autoagents-derive/src/: lib.rs  resolve.rs  schema_emit.rs
crates/autoagents-derive/src/agent/: mod.rs  output.rs
crates/autoagents-derive/src/tool/: attr.rs  field.rs  input.rs  json.rs  mod.rs
crates/autoagents-derive/tests/: .gitignore  compile.rs  macro_coverage.rs  ui.rs
crates/autoagents-derive/tests/compile-fail-invalid-choice/: Cargo.toml
crates/autoagents-guardrails/: Cargo.toml
crates/autoagents-guardrails/src/: engine.rs  guard.rs  layer.rs  lib.rs  policy.rs  provider.rs  sanitizers.rs  stream.rs
crates/autoagents-llamacpp/: Cargo.toml
crates/autoagents-llamacpp/src/: builder.rs  chat_template.rs  config.rs  conversion.rs  error.rs  huggingface.rs  lib.rs  models.rs  provider.rs  server_chat.rs
crates/autoagents-llamacpp/tests/: grammar_no_tools_integration.rs
crates/autoagents-llm/: Cargo.toml  build.rs
crates/autoagents-llm/src/: builder.rs  config.rs  error.rs  http.rs  image_generation.rs  lib.rs  protocol.rs  request_diagnostics.rs  secret_store.rs  wasi_http.rs
crates/autoagents-llm/tests/: anthropic_tests.rs  azure_openai_tests.rs  deepseek_tests.rs  google_tests.rs  main.rs  ollama_tests.rs  openai_tests.rs  other_backends_tests.rs
crates/autoagents-mistral-rs/: Cargo.toml
crates/autoagents-mistral-rs/src/: config.rs  conversion.rs  error.rs  lib.rs  models.rs  provider.rs
crates/autoagents-pocket-tts/: Cargo.toml
crates/autoagents-pocket-tts/examples/: basic_generation.rs  quick_streaming.rs  realtime_playback.rs
crates/autoagents-pocket-tts/src/: config.rs  conversion.rs  error.rs  lib.rs  library.rs  models.rs  provider.rs  server.rs  voices.rs
crates/autoagents-protocol/: Cargo.toml
crates/autoagents-protocol/src/: lib.rs  llm.rs  protocol.rs  task.rs  tool.rs
crates/autoagents-qdrant/: Cargo.toml  README.md
crates/autoagents-qdrant/src/: lib.rs
crates/autoagents-serve/: Cargo.toml  LOGGING_GUIDE.md  README.md  README_SERVE_CLI.md
crates/autoagents-serve/src/: builder.rs  error.rs  lib.rs  utils.rs
crates/autoagents-speech/: Cargo.toml
crates/autoagents-speech/src/: audio_capture.rs  error.rs  lib.rs  model_source.rs  models.rs  playback.rs  provider.rs  speech.rs  types.rs
crates/autoagents-telemetry/: Cargo.toml  REAMDE.md
crates/autoagents-telemetry/src/: config.rs  exporter.rs  fanout.rs  lib.rs  runner.rs  tracer.rs
crates/autoagents-test-utils/: Cargo.toml
crates/autoagents-test-utils/src/: agent.rs  llm.rs
crates/autoagents-toolkit/: Cargo.toml
crates/autoagents-toolkit/tests/: filesystem_sandbox.rs  mcp_stdio_integration.rs
crates/autoagents-tts/: Cargo.toml
crates/autoagents-tts/src/: builder.rs  error.rs  lib.rs  provider.rs  speech.rs  types.rs  voice.rs
crates/autoagents/src/: lib.rs  prelude.rs
crates/autoagents/tests/: derive_macro_coverage.rs
crates/burn/: Cargo.toml  README.md
crates/burn/src/: backend.rs  lib.rs  utils.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: agent_runtime.proto
crates/core/src/: actor.rs  environment.rs  error.rs  lib.rs  protocol.rs  session.rs  tool.rs  utils.rs
crates/core/src/actor/: messaging.rs  (+4 more)
crates/liquid-edge/: Cargo.toml
crates/liquid-edge/src/: config.rs  device.rs  error.rs  lib.rs  main.rs  model.rs  templates.rs  tokenizer.rs  utils.rs
crates/llm/: Cargo.toml  README.md
crates/llm/src/: builder.rs  error.rs  lib.rs  secret_store.rs  tool.rs
crates/llm/tests/: README.md  anthropic_tests.rs  azure_openai_tests.rs  google.rs  google_tests.rs  main.rs  ollama_tests.rs  openai.rs  openai_tests.rs  other_backends_tests.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: agent.rs  lib.rs  llm.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/: lib.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: actor.rs  basic.rs  chaining.rs  chat.rs  distributed.rs  events.rs  hooks.rs  liquid_edge.rs  llm.rs  main.rs  manual_tool_agent.rs  onnx.rs  onnx_ort.rs  simple.rs  single_threaded.rs  streaming.rs  structured_output.rs  thinking.rs  toolkit.rs  utils.rs
examples/burn/: Cargo.toml  README.md
examples/burn/src/: lib.rs  main.rs
examples/cluster/: Cargo.toml  README.md
examples/cluster/src/: agents.rs  main.rs
examples/code_mode/: Cargo.toml  README.md
examples/code_mode/src/: main.rs  tools.rs
examples/coding_agent/: Cargo.toml  README.md
examples/coding_agent/src/: agent.rs  interactive.rs  main.rs  tools.rs
examples/design_patterns/: Cargo.toml  README.md
examples/design_patterns/src/: chaining.rs  environment_lifecycle.rs  main.rs  parallel.rs  planning.rs  reflection.rs  routing.rs
(+698 files in other folders)
