[workspace]
resolver = "2"

default-members = [
    "crates/autoagents",
    "crates/autoagents-core",
    "crates/autoagents-llm",
    "crates/autoagents-derive",
]
members = ["crates/*", "examples/*"]

exclude = ["examples/wasm_tool"]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent Framework for Building Autonomous Agents"
repository = "https://github.com/liquidos-ai/AutoAgents"
keywords = ["agents", "llm"]
categories = []

[workspace.dependencies]
autoagents = { path = "crates/autoagents", version = "0.2.4" }
autoagents-llm = { path = "crates/autoagents-llm", version = "0.2.4" }
autoagents-derive = { path = "crates/autoagents-derive", version = "0.2.4" }
autoagents-core = { path = "crates/autoagents-core", version = "0.2.4" }
autoagents-test-utils = { path = "crates/autoagents-test-utils", version = "0.2.4" }
autoagents-onnx = { path = "crates/autoagents-onnx", version = "0.2.4" }
autoagents-burn = { path = "crates/autoagents-burn", version = "0.2.4", default-features = false }
autoagents-mistral-rs = { path = "crates/autoagents-mistral-rs", version = "0.2.4" }
autoagents-toolkit = { path = "crates/autoagents-toolkit", version = "0.2.4" }
autoagents-cli = { path = "crates/autoagents-cli", version = "0.2.4" }
autoagents-serve = { path = "crates/autoagents-serve", version = "0.2.4" }

syn = { version = "2.0.98", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.225", features = ["derive"], default-features = false }
serde_json = "1.0.145"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
tokio-stream = "0.1.17"
thiserror = "2.0.11"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
proc-macro2 = "1.0.93"
quote = "1.0.38"
clap = { version = "4.5.31", features = ["derive"] }
ureq = { version = "3.0.8", features = ["json"] }
uuid = { version = "1.15.1", features = ["v4"] }
log = "0.4"
env_logger = { version = "0.11" }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
dirs = "6.0.0"
regex = "1.11.1"
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"
wasmtime = "37.0.2"
tokenizers = { version = "0.22.0", default-features = false, features = [
    "onig",
] }
rand = "0.9.2"
minijinja = "2.3"
tiktoken-rs = { version = "0.5" }
base64 = "0.22.1"
either = { version = "1.15.0", features = ["serde"] }
tempfile = "3.10.1"
getrandom = "0.3.3"
ndarray = "0.16"
tokio-test = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6"
bytemuck = "1.23.2"
once_cell = "1.21.3"
rmcp = { version = "0.8.1" }
image = { version = "0.25.8" }
anyhow = "1.0"
