[workspace]
resolver = "2"

default-members = [
    "crates/autoagents",
    "crates/autoagents-core",
    "crates/autoagents-llm",
    "crates/autoagents-derive",
    "crates/autoagents-protocol",
]
members = ["crates/*", "examples/*"]

exclude = ["examples/wasm_tool", "crates/autoagents-test-utils"]

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Agent Framework for Building Autonomous Agents"
repository = "https://github.com/liquidos-ai/AutoAgents"
keywords = ["agents", "llm"]
readme = "README.md"
categories = []

[workspace.dependencies]
# Core Crates
autoagents = { path = "crates/autoagents", version = "0.3.3" }
autoagents-derive = { path = "crates/autoagents-derive", version = "0.3.3" }
autoagents-core = { path = "crates/autoagents-core", version = "0.3.3" }
autoagents-toolkit = { path = "crates/autoagents-toolkit", version = "0.3.3" }
autoagents-protocol = { path = "crates/autoagents-protocol", version = "0.3.3" }

# LLM and Providers
autoagents-llm = { path = "crates/autoagents-llm", version = "0.3.3" }
autoagents-mistral-rs = { path = "crates/autoagents-mistral-rs" }
autoagents-llamacpp = { path = "crates/autoagents-llamacpp", version = "0.3.3" }

# Store
autoagents-qdrant = { path = "crates/autoagents-qdrant", version = "0.3.3" }

# Speech (TTS/STT)
autoagents-speech = { path = "crates/autoagents-speech", version = "0.3.3" }

# Telemetry
autoagents-telemetry = { path = "crates/autoagents-telemetry", version = "0.3.3" }


syn = { version = "2.0.98", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }
serde = { version = "1.0.228", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
strum_macros = "0.27.2"
tokio-stream = "0.1.18"
thiserror = "2.0.18"
futures = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
proc-macro2 = "1.0.106"
quote = "1.0.44"
clap = { version = "4.5.58", features = ["derive"] }
ureq = { version = "3.2.0", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4"] }
log = "0.4.29"
env_logger = { version = "0.11.9" }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
dirs = "6.0.0"
regex = "1.12.3"
glob = "0.3.3"
walkdir = "2.5"
ignore = "0.4.25"
wasmtime = "41.0.3"
tokenizers = { version = "0.22.0", default-features = false, features = [] }
rand = "0.10.0"
minijinja = "2.3"
tiktoken-rs = { version = "0.9.1" }
base64 = "0.22.1"
either = { version = "1.15.0", features = ["serde"] }
tempfile = "3.10.1"
getrandom = "0.4.1"
ndarray = "0.17.2"
tokio-test = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6"
bytemuck = "1.23.2"
once_cell = "1.21.3"
pdf-extract = "0.10.0"
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
quick-xml = "0.39.1"
calamine = "0.33"
html2text = "0.16.7"
csv = "1.4"
rmcp = { version = "0.15.0" }
image = { version = "0.25.9" }
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
qdrant-client = { version = "1.14.0", default-features = false, features = [
    "serde",
] }
httpmock = "0.8.3"
testcontainers = "0.27.0"
surrealdb = "2.6.1"
hound = "3.5.1"
rodio = "0.21.1"


[profile.release]
debug = true      # Include debug symbols
lto = "thin"      # Enable link-time optimization
codegen-units = 1 # Better optimization (slower compile)

# Separate profile for profiling (keeps release fast)
[profile.profiling]
inherits = "release"
debug = true         # Full debug info for symbols
strip = false        # Don't strip symbols

[profile.bench]
debug = true
