[package]
name = "autoagents-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
autoagents = { workspace = true }
autoagents-core = { workspace = true }
async-trait = { workspace = true }
trybuild = { workspace = true }
