[package]
name = "autoagents-guardrails"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
autoagents-llm.workspace = true
autoagents-protocol.workspace = true
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
