[package]
name = "autoagents-pocket-tts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pocket-TTS provider implementation for AutoAgents TTS framework"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
autoagents-tts = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# TTS engine
pocket-tts = { git = "https://github.com/SKRohit/pocket-tts.git", branch = "main" }
candle-core = "0.9.1"

# Error handling
thiserror = { workspace = true }

# HTTP client for server backend
reqwest = { workspace = true, optional = true }

# Utilities
base64 = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[features]
default = ["library"]
library = []
server = ["reqwest"]
metal = ["candle-core/metal"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
hound = "3.5"
env_logger = { workspace = true }
rodio = "0.19"
