[package]
name = "autoagents-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
