[package]
name = "autoagents-qdrant"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
autoagents-core.workspace = true
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
testcontainers = { workspace = true }
httpmock = { workspace = true }
