[package]
name = "autoagents-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
cuda = ["autoagents-mistral-rs/cuda"]
metal = ["autoagents-mistral-rs/metal"]
http-serve = ["axum", "tower", "tower-http"]
search = ["autoagents-toolkit/search"]

[dependencies]
autoagents = { workspace = true, features = ["full", "logging"] }
autoagents-mistral-rs = { workspace = true }
autoagents-toolkit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

# HTTP server dependencies (feature-gated)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
