[package]
name = "autoagents-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
cuda = ["autoagents-mistral-rs/cuda"]
metal = ["autoagents-mistral-rs/metal"]
http-serve = ["axum", "tower", "tower-http"]
search-tools = ["autoagents-toolkit/search"]
accelerate = ["autoagents-mistral-rs/accelerate"]

[dependencies]
autoagents = { workspace = true, features = ["full", "logging"] }
autoagents-mistral-rs = { workspace = true }
autoagents-toolkit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

serde_yaml = "0.9.3" #Need to replace with something supported

axum = { version = "0.8.6", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = [
  "cors",
  "trace",
], optional = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
