[package]
name = "autoagents-speech"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Speech (TTS/STT) provider abstractions for AutoAgents"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["pocket-tts", "parakeet", "playback"]
pocket-tts = ["dep:pocket-tts", "dep:candle-core", "dep:uuid", "dep:anyhow", "dep:tokio-stream"]
parakeet = ["dep:parakeet-rs"]
playback = ["dep:rodio"]

# Forward parakeet-rs execution provider features
cuda = ["parakeet", "parakeet-rs/cuda"]
tensorrt = ["parakeet", "parakeet-rs/tensorrt"]
directml = ["parakeet", "parakeet-rs/directml"]
coreml = ["parakeet", "parakeet-rs/coreml"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

# Pocket-TTS dependencies (optional, enabled by feature)
pocket-tts = { version = "0.3.1", optional = true }
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
anyhow = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Playback dependencies
rodio = { workspace = true, optional = true }

# Parakeet dependencies (optional, enabled by feature)
parakeet-rs = { version = "0.3.3", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
hound = { workspace = true }
env_logger = { workspace = true }
