[package]
name = "autoagents-speech"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Speech (TTS/STT) provider abstractions for AutoAgents"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["pocket-tts", "parakeet", "playback", "audio-capture", "vad"]
pocket-tts = ["dep:pocket-tts", "dep:candle-core", "dep:uuid", "dep:anyhow", "dep:tokio-stream", "dep:sentencepiece"]
parakeet = ["dep:parakeet-rs"]
playback = ["dep:rodio"]
audio-capture = ["dep:cpal", "dep:hound", "dep:symphonia"]
model-hf = ["dep:hf-hub"]
vad = ["dep:ort", "dep:ndarray", "model-hf"]

# Forward parakeet-rs execution provider features
cuda = ["parakeet", "parakeet-rs/cuda"]
tensorrt = ["parakeet", "parakeet-rs/tensorrt"]
directml = ["parakeet", "parakeet-rs/directml"]
coreml = ["parakeet", "parakeet-rs/coreml"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

# Pocket-TTS dependencies (optional, enabled by feature)
pocket-tts = { version = "0.3.1", optional = true }
# Force system sentencepiece to avoid duplicate protobuf symbols with ort-sys when
# both pocket-tts (via candle → tokenizers → sentencepiece-sys) and vad (via ort-sys)
# are enabled together. Cargo's feature unification propagates this to all transitive
# dependents automatically.
sentencepiece = { version = "0.13", optional = true, features = ["system"] }
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
anyhow = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Playback dependencies
rodio = { workspace = true, optional = true }

# Audio capture
cpal = { version = "0.16.0", optional = true }
hound = { workspace = true, optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["flac", "ogg", "vorbis", "mp3", "pcm"] }

# VAD (optional)
ort = { version = "=2.0.0-rc.11", optional = true }
ndarray = { version = "0.17.2", optional = true }
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"], optional = true }

# Parakeet dependencies (optional, enabled by feature)
parakeet-rs = { version = "0.3.3", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
env_logger = { workspace = true }
