[package]
name = "autoagents-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
autoagents = { workspace = true }
autoagents-derive = { workspace = true }
autoagents-llm = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
